--- a/src/styles.css
+++ b/src/styles.css
@@ -223,7 +223,9 @@ body {
   flex: 1 0 30%;
   min-width: 0;
   padding: 0.3em 0.6em;
+  color: var(--text-color);
   font: 1em "Latin Modern Sans", sans-serif;
+  background: var(--item-color);
   border: none;
   box-shadow: var(--input-box-shadow);
   -webkit-appearance: none;
